# rusty-riscy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: bin.rs  lib.rs  logo.txt  main.rs  primetest.rs  utils.rs
src/src/: main.rs  primetest  primetest.rs
src/src/benchmark/: bm_test1.rs
