[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.11.0"

#[lib]
#path = "src/bin/lib.rs"

#[[bin]]
#name = "rusty-riscy-bin"
#path = "src/bin/bin.rs"

#[exclude]
#path = "src/bin"
